<resources>
    <string name="app_name">TranHoPhiLong_19500551_changemaker</string>
    <string name="price">Price: </string>

    <string name="_20">$20: \u0020</string>
    <string name="_10">$10: \u0020</string>
    <string name="_1c">1¢: \u0020\u0020\u0020</string>
    <string name="_5c">5¢: \u0020\u0020\u0020</string>
    <string name="_10c">10¢: \u0020</string>
    <string name="_25c">25¢: \u0020</string>
    <string name="_1dolar">$1: \u0020\u0020\u0020</string>
    <string name="_5dolar">$5: \u0020\u0020\u0020</string>
    <string name="_0">0</string>
    <string name="clear">clear</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="dot">.</string>
    <string name="p"></string>


</resources>